--- a/views/results.erb
+++ b/views/results.erb
@@ -2,7 +2,7 @@
 
 <h2>Number of Words: </h2>
 
-<h2>Vowels: <%= analyzed_text%></h2>
+<h2>Vowels: <%= analyzed_text.count_of_vowels %></h2>
 
 <h2>Consonants: </h2>
 
